--- a/IVCMT.html
+++ b/IVCMT.html
@@ -85,14 +85,14 @@
 					<div id="ComparisonOverviewPane">
 						<div class="titlebar">Comparison Overview</div>						
 						<div class="view">
-							<canvas id="ComparisonOverviewCanvas">
+							<canvas id="ComparisonOverviewCanvas" title="Click to select reference tree">
 								One does not simply use HTML5 Canvas with this browser
 							</canvas>
 						</div>
 					</div>
 					<div id="ScoreDistributionPane">
 						<div class="titlebar">Score Distribution View</div>						
-						<div class="view">
+						<div class="view" title="Click to open/close Tree Comparison View for specific tree">
 						<canvas>
 							One does not simply use HTML5 Canvas with this browser
 						</canvas>
@@ -101,7 +101,7 @@
 					<div id="ReferenceTreePane">
 						<div class="titlebar">Reference Tree View</div>						
 						<div class="view">
-						<canvas>
+						<canvas title="Click to select nodes">
 							One does not simply use HTML5 Canvas with this browser
 						</canvas>
 						</div>
