--- a/IVCMT.html
+++ b/IVCMT.html
@@ -69,21 +69,19 @@
 							</select></td>
 						</tr>
 					</table></td>
-					<td style="text-align: right">
-						<h1>Vis2: Interactive Visual Comparison of Multiple Trees</h1>
-						<span class="info">Florian Spechtenhauser 0xxxxxxx, Christian Möllinger 0725979 / <a id="show_help_link" href="javascript: window.ViewManager.ShowHelpWindow()">show help</a></span>
-					</td>
+					<td style="text-align: right"><h1>Vis2: Interactive Visual Comparison of Multiple Trees</h1><span class="info">Florian Spechtenhauser 0xxxxxxx, Christian Möllinger 0725979 / <a id="show_help_link" href="javascript: window.ViewManager.ShowHelpWindow()">show help</a></span></td>
 				</tr>
 			</table>
 
-			
 		</div>
 
 		<div id='content'>
 			<div id='jqxSplitter' style="width: auto; height: auto; background-color: #FFFFFF">
 				<div id="jqxSplitter2" style="background-color: red; height: 100%">
 					<div id="ComparisonOverviewPane">
-						<div class="titlebar">Comparison Overview</div>						
+						<div class="titlebar">
+							Comparison Overview
+						</div>
 						<div class="view">
 							<canvas id="ComparisonOverviewCanvas" title="Click to select reference tree">
 								One does not simply use HTML5 Canvas with this browser
@@ -91,19 +89,23 @@
 						</div>
 					</div>
 					<div id="ScoreDistributionPane">
-						<div class="titlebar">Score Distribution View</div>						
+						<div class="titlebar">
+							Score Distribution View
+						</div>
 						<div class="view" title="Click to open/close Tree Comparison View for specific tree">
-						<canvas>
-							One does not simply use HTML5 Canvas with this browser
-						</canvas>
+							<canvas>
+								One does not simply use HTML5 Canvas with this browser
+							</canvas>
 						</div>
 					</div>
 					<div id="ReferenceTreePane">
-						<div class="titlebar">Reference Tree View</div>						
+						<div class="titlebar">
+							Consensus Tree View
+						</div>
 						<div class="view">
-						<canvas title="Click to select nodes">
-							One does not simply use HTML5 Canvas with this browser
-						</canvas>
+							<canvas title="Click to select nodes">
+								One does not simply use HTML5 Canvas with this browser
+							</canvas>
 						</div>
 					</div>
 				</div>
@@ -124,26 +126,42 @@
 			</div>
 
 		</div>
-		<div id="help" style="position: absolute; float: left; background-color: red">
+		<div id="help" style="">
 			<h1>Help</h1>
-			<h2>How to use this program</h2>
-			<h3>Comparison Overview</h3>
-			On the left side, the upper view is the Comparison Overview. It contains one row,
-			and one column per tree, so that you get a quick overview of the measurement between the trees.<br/>
-			Within the Comparison Overview, you can select the reference tree by clicking on a column. If you select a reference tree,
-			all measures are recalculated and the views are updated.
+			<h2>1. The Views</h2>
+			<h3>1.1 Comparison Overview</h3>
+			An overview of pairwise similarities of all trees in the test data set is
+			presented by the similarity matrix. Every row/column represents
+			one tree and the cells encode the global similarity evaluation of tree
+			pairs. This view allows for an overview of global similarities among
+			trees and thereby, offers the possibility to select a reference tree for
+			more detailed 1:n tree comparison in other views. The reference tree is selected by clicking on a <b>column</b>
+			If a new reference tree is selected, all measures are recalculated and the views are updated.
+			<br/>
+			The selected reference tree is highlighted with a black border, while currently compared trees are highlighted with a red border.
 			<h3>Score Distribution Overview</h3>
-			Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
-			Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
-			Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
-			<h3>Reference Tree View</h3>
-			Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
-			Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
-			Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
-			<h3>Tree Comparison Views</h3>
-			Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
-			Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
-			Fischers Fritze fischt frische Fische. Frische Fische fischt Fischers Fritze.
+			The Score Distribution Overview provides a compact overview of the score distribution of all nodes in each tree when compared to the selected reference tree. 
+			Clicking on a histogram opens/closes the detailed Tree Comparison View for the selected tree (compared against the selected reference tree). Trees which are currently 
+			viewed in the Tree Comparison View are highlighted with a red border.
+
+			<h3>1.2 Consensus Tree View</h3>
+			The Consensus Tree View shows the selected reference tree, and provides a compact form of a comparison between the reference tree and all other trees. Each displayed scored is the average of the scores comparing the reference tree node against its best matching unit in all other trees.
+			<br/>In The Consensus Tree View, tree nodes can be selected by clicking on it. If a node is selected, in all open Tree Comparison Views, the matching nodes and leaves are highlighted with a purple color.
+			<h3>1.3 Tree Comparison Views</h3>
+			The tree comparison view is the most detailed view presented in the paper, and it contains the comparison tree scored against the selected reference tree. Nodes which have a score below the user-defined threshold are automatically collapsed, but the user can manually collapse/open nodes by clicking on it. Collapsed nodes are represented by a green square.
+			<h2>2. How to use the program</h2>
+			<ol>
+				<li>Select the measure which you want to use to calculate the similarity scores and set the threshold for automatic node collapsing</li>
+				<li>Use the Comparison Overview to get an overview of the loaded trees and there similarity</li>
+				<li>Select a reference tree by clicking on a column in the Comparison Overview</li>
+				<li>Use the Score Distribution Overview to get an overview of the similarity of the other trees to the reference tree</li>
+				<li>Open detailed Tree Comparison Views by clicking on the histograms in the Score Distribution Overview</li>
+				<li>Feel free to select nodes in the Consensus Tree View, which get highlighted in the open Tree Comparison Views</li>
+			</ol>
+			<h2>3. References</h2>
+			S. Bremm, T. Landesberger, M. Heß, T. Schreck, Ph. Weil, K. Hamacher. <i>Interactive visual comparison of multiple trees. </i> IEEE Computer Society, Technical Committee on Visualization and Graphics:
+IEEE Conference on Visual Analytics Science and Technology, VAST 2011. Proceedings : 23-28 October 2011
+
 		</div>
 	</body>
 </html>
