Fixed sizes and help layout to fit in fullscreen on 1280x800

--- a/IVCMT.html
+++ b/IVCMT.html
@@ -126,7 +126,7 @@
 			</div>
 
 		</div>
-		<div id="help" style="">
+		<div id="help">
 			<h1>Help</h1>
 			<h2>1. The Views</h2>
 			<h3>1.1 Comparison Overview</h3>
@@ -158,7 +158,9 @@
 				<li>Open detailed Tree Comparison Views by clicking on the histograms in the Score Distribution Overview</li>
 				<li>Feel free to select nodes in the Consensus Tree View, which get highlighted in the open Tree Comparison Views</li>
 			</ol>
-			<h2>3. References</h2>
+			<h2>3. Notes</h2>
+			The application is optimized for a resolution with at least 1280x800 pixels.
+			<h2>4. References</h2>
 			S. Bremm, T. Landesberger, M. Heß, T. Schreck, Ph. Weil, K. Hamacher. <i>Interactive visual comparison of multiple trees. </i> IEEE Computer Society, Technical Committee on Visualization and Graphics:
 IEEE Conference on Visual Analytics Science and Technology, VAST 2011. Proceedings : 23-28 October 2011
 
