Changed default sizes

--- a/IVCMT.html
+++ b/IVCMT.html
@@ -161,7 +161,7 @@
 				<li>Feel free to select nodes in the Consensus Tree View, which then will get highlighted in the open Tree Comparison Views</li>
 			</ol>
 			<h2>3. Notes</h2>
-			The application is optimized for a resolution with at least 1280x800 pixels.
+			The application is optimized for a resolution with at least 1280x800 pixels and should be used in <b>fullscreen</b>.
 			<h2>4. References</h2>
 			S. Bremm, T. Landesberger, M. Heß, T. Schreck, Ph. Weil, K. Hamacher. <i>Interactive visual comparison of multiple trees. </i> IEEE Computer Society, Technical Committee on Visualization and Graphics:
 IEEE Conference on Visual Analytics Science and Technology, VAST 2011. Proceedings : 23-28 October 2011
